# Machine_Learning_Works

./: README.md  main.py  pyproject.toml  requirements.txt  test.ipynb
DBSCAN/: implementation.ipynb
Decision_Tree/: classifier_implementation.ipynb  regressor_implementation.ipynb
Exploratory_Data_Analysis/: red_wine_dataset.ipynb
Feature_Engineering/: data_encoding_techniques.ipynb  handling_imbalance_dataset.ipynb  handling_imbalanced_dataset_with_smote.ipynb  handling_missing_values.ipynb  handling_outliers.ipynb
Hierarchal_Clustering/: implementation.ipynb
Isolation_Forest/: anomaly_detection.ipynb
KMeans_Clustering/: implementation.ipynb
K_Nearest_Neighbor/: sample_implementation.ipynb
Logistic_Regression/: example_implementaton.ipynb
Naive_Bayes/: gaussian_naive_bayes.ipynb
PCA/: implementation.ipynb
Projects/Student_Performance_Indicator/: app.py  main.py  pyproject.toml  requirements.txt  setup.py
Projects/Student_Performance_Indicator/artifacts/: preprocessor.pkl  trained_model.pkl
Projects/Student_Performance_Indicator/dataset/: EDA.ipynb  TRAINING.ipynb
Projects/Student_Performance_Indicator/dataset/catboost_info/: catboost_training.json  time_left.tsv
Projects/Student_Performance_Indicator/dataset/catboost_info/learn/: events.out.tfevents
Projects/Student_Performance_Indicator/src/: exception.py  logger.py  utils.py
Projects/Student_Performance_Indicator/src/components/: data_ingestion.py  data_transformation.py  model_training.py
Projects/Student_Performance_Indicator/src/pipeline/: prediction_pipeline.py
Random_Forest/: holiday_package_prediction.ipynb  used_car_price_prediction.ipynb
Regression/: model.pkl  (+5 more)
(+152 files in other folders)
