[project]
name = "machine-learning-works"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.2.0",
    "kneed>=0.8.6",
    "lxml>=6.1.0",
    "matplotlib>=3.10.9",
    "nbformat>=4.2.0",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[tool.uv.workspace]
members = [
    "Projects/Student_Performance_Indicator",
]
