[project]
name = "performance_indicator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies =  [
 
]

[dependency-groups]
dev = [
    "catboost>=1.2.10",
    "dill>=0.4.1",
    "flask>=3.1.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "performance-indicator",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
    "xgboost>=3.2.0",
]

[tool.uv.sources]
performance-indicator = { workspace = true }

